bug fix , creating one time user